--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -8,14 +8,14 @@
 a,
 .green {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: var(--linkcolor);
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: var(--linkhover);
   }
 }
 
